@@ -2,16 +2,21 @@ package com.sprint.mission.discodeit.mapper;
 
 import com.sprint.mission.discodeit.dto.BinaryContentDto;
 import com.sprint.mission.discodeit.dto.MessageDto;
+import com.sprint.mission.discodeit.dto.MessageDto.CreateCommand;
+import com.sprint.mission.discodeit.dto.MessageDto.CreateRequest;
+import com.sprint.mission.discodeit.dto.MessageDto.UpdateCommand;
+import com.sprint.mission.discodeit.dto.MessageDto.UpdateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.User;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.ReportingPolicy;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.multipart.MultipartFile;
 
 @Mapper(componentModel = "spring", unmappedTargetPolicy = ReportingPolicy.IGNORE)
 public abstract class MessageMapper {
@@ -26,9 +31,13 @@ public abstract class MessageMapper {
 
   protected List<BinaryContentDto.Detail> toAttachmentDetails(List<BinaryContent> attachments) {
 
+    if (attachments == null) {
+      return List.of();
+    }
+
     return attachments.stream()
                       .map(binaryContentMapper::toDetail)
-                      .collect(Collectors.toList());
+                      .toList();
   }
 
   public Message toEntity(MessageDto.CreateCommand create, Channel channel, User author,
@@ -39,5 +48,23 @@ public abstract class MessageMapper {
                   .content(create.getContent())
                   .attachments(attachments)
                   .build();
+  }
+
+
+  public CreateCommand toCommand(CreateRequest request, List<MultipartFile> attachments) {
+    return CreateCommand.builder()
+                        .channelId(request.getChannelId())
+                        .authorId(request.getAuthorId())
+                        .content(request.getContent())
+                        .attachments(attachments)
+                        .build();
+  }
+
+
+  public UpdateCommand toCommand(UpdateRequest request, UUID id) {
+    return UpdateCommand.builder()
+                        .id(id)
+                        .content(request.getNewContent())
+                        .build();
   }
 }
